See #340  FindBugs analysis complete